# Novelty-Search-for-Racing-Track-Design

./: .gitignore  README.md  plot_tracks.py  pyproject.toml
data/EmbeddingModels/: tsne_model.joblib  umap_model.joblib
data/multi_run/: README.md
data_analysis/EmbeddingModels/: umap_model.joblib
mapelite/: CVT_mapelite.ipynb  archive_visualizer.py  config.py  emitter.py  evaluator.py  logging_config.py  mapVoronoi.ipynb  mapelite.ipynb  mapelite2.ipynb  mapeliteVoronoi.ipynb  measure_space.py  novelty_search.ipynb  ns.py  qd_runner.py  qd_stats.py  utils.py
mapelite/data_analysis/: FFT_test.ipynb  cvt_result_analysis.ipynb  dataset_gen.py  dataset_gen_fitness.py  dataset_gen_metrics.py  dataset_gen_tracks.py  dataset_gen_xml.py  embedding_space_analysis.ipynb  noiseness_analysis_convexhull.ipynb  noiseness_analysis_voronoi.ipynb  ns_result_analysis.ipynb  plots_checkpoints.ipynb  utils.py  vae_embedding_space_analysis.ipynb  vae_roll_invariance_test.ipynb  vae_sensitivity_analysis.ipynb  visualize_elites.ipynb  visualize_elites_2.ipynb  visualize_perlin.py
mapelite/embeddings/: gen_embedding_metrics.py  gen_embedding_xml.py  inspect_data.py  visualizer.py
mapelite/trackgen/: alea.py
mapelite/vae/: __init__.py  config.py  data.py  latent_transform.py  losses.py  model.py  preprocessing.py  training.py
mapelite/visualizations/: canonicalization_1.py
qd/: archive_visualizer.py  config.py  emitter.py  evaluator.py  logging_config.py  multi_run_visualizer.py  novelty_search.ipynb  ns.py  qd_runner.py  qd_stats.py  utils.py
qd/analysis/: utils.py
qd/data_analysis/: FFT_test.ipynb  latent_health_check_elites.py  ns_result_analysis.ipynb  reconstruction_quality_elites.py  vae_embedding_space_analysis.ipynb  vae_roll_invariance_test.ipynb  vae_sensitivity_analysis.ipynb  visualize_elites_2.ipynb
qd/embeddings/: gen_embedding_metrics.py  gen_embedding_xml.py  visualizer.py
src/: Dockerfile  compileWSL  package.json
web/: crossover.html  mutation.html  server.js  track_showcase_embed.html  track_visualizer.html
(+94 files in other folders)
